# swift-db

./: .gitignore  Cargo.toml  LANGUAGE.md  LICENSE.md  README.md
src/: main.rs
src/archive/: archive_parser.rs  block_file_io.rs  block_file_reader.rs  document_serialize.rs  mod.rs  parse_error.rs
src/backend/: backend.rs  lock.rs  mod.rs  operation.rs  operation_error.rs  operations.rs  query.rs  request.rs  selection.rs  tests.rs
src/database/: configuration.rs  database.rs  lifecycle_error.rs  mod.rs  operation_error.rs  operations.rs  query.rs  tests.rs
src/frontend/: connection.rs  frontend_error.rs  mod.rs  selection.rs  transaction.rs
src/language/: build_statement.rs  expression.rs  mod.rs  parse_error.rs  parser.rs  response.rs  statement.rs  tests.rs
src/schema/: document.rs  field.rs  field_instance.rs  field_type.rs  field_value.rs  mod.rs  schema.rs
src/transfer/: bare_document.rs  document_deserialize.rs  document_serialize.rs  errors.rs  mod.rs
src/util/: lock_type.rs  mod.rs  prim_int.rs  typedefs.rs
